<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingTop="30dp"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/nav_show_mahasiswa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/lihat_data"
        android:background="@drawable/bg_nav_button"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/nav_edit_mahasiswa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/update_data"
        android:background="@drawable/bg_nav_button"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/nav_destroy_mahasiswa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/hapus_data"
        android:background="@drawable/bg_nav_button"
        />
</LinearLayout>