<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/bg_dashboard"
        android:layout_marginVertical="35dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/bg_dashboard"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/nav_mahasiswa_index"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lihat_data"
        android:textSize="20sp"
        android:fontFamily="@font/bold"
        android:background="@drawable/bg_nav_button"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/bg_dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/nav_mahasiswa_create"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/input_data"
        android:textSize="20sp"
        android:fontFamily="@font/bold"
        android:background="@drawable/bg_nav_button"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/nav_mahasiswa_index"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/nav_info"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/informasi"
        android:textSize="20sp"
        android:fontFamily="@font/bold"
        android:background="@drawable/bg_nav_button"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/nav_mahasiswa_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/nav_logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/logout"
        android:textSize="20sp"
        android:fontFamily="@font/bold"
        android:background="@drawable/bg_nav_button"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/nav_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>